--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@toolkitx/paypal",
   "version": "0.0.1",
-  "description": "",
+  "description": "A wrapper for PayPal REST API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "directories": {
